finally fixed horizontal scroll of header

--- a/src/styles/blocks/compare.scss
+++ b/src/styles/blocks/compare.scss
@@ -34,6 +34,7 @@
     width: 100%;
     height: auto;
     display: block;
+    margin: 0 0 32px;
   }
 
   &__card-title {
@@ -41,7 +42,7 @@
   }
 
   &__description {
-
+    margin: 8px 0 16px;
   }
 
   &__price {
