--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,14 +1,16 @@
 .header {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-image: url('../images/header-background.png');
   background-size: cover;
   background-position: right;
-  transition: transform $effectDuration;
+  transition: left $effectDuration;
   position: relative;
+  left: 0;
 
   &--moved {
-    transform: translateX(-100vw);
+    //transform: translateX(-100%);
+    left: -100%;
   }
 
   &__content {
