--- a/src/styles/blocks/inspiration.scss
+++ b/src/styles/blocks/inspiration.scss
@@ -5,6 +5,7 @@
     color: $primaryColor;
     margin: 60px 0 0;
     row-gap: 32px;
+    align-items: start;
 
     @include on-tablet {
       margin: 120px 0 0;
