--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,16 +1,15 @@
 .menu {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #c2c2c2;
   position: absolute;
   top: 0;
-  left: 0;
-  transform: translateX(100%);
+  right: -100%;
   z-index: 1;
-  transition: transform $effectDuration;
+  transition: right $effectDuration;
 
   &--opened {
-    transform: translateX(0);
+    right: 0;
   }
 
   &__content {
