--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,9 +9,12 @@
 @import './blocks/inspiration';
 @import './blocks/compare';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  overflow-x: hidden;
   font-family: Poppins, sans-serif;
   background-color: $secondaryColor;
 
@@ -25,3 +28,9 @@ a {
   color: $secondaryColor;
 }
 
+.header-menu-wrapper {
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  position: relative;
+}
