--- a/src/styles/utils/text-styles.scss
+++ b/src/styles/utils/text-styles.scss
@@ -1,4 +1,5 @@
 .u {
+
   &-title {
     font-size: 32px;
     letter-spacing: -1.5px;
@@ -19,6 +20,7 @@
     font-size: 24px;
     line-height: 140%;
     letter-spacing: 0;
+    margin: 0;
   }
 
   &-text {
@@ -26,5 +28,6 @@
     font-size: 16px;
     line-height: 140%;
     letter-spacing: 0;
+    margin: 0;
   }
 }
